changes hyperlinks to titles instead of start of sections. Changes max height on testimonal box to avoid overflow

--- a/css/_shows.scss
+++ b/css/_shows.scss
@@ -191,7 +191,7 @@
     padding-bottom: 6em;
 
     .carousel-item  {
-        max-height: 800px;
+        max-height: 1000px;
     }
 
     .test-slide {
